--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -1,67 +1,70 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title margin-left>
-      {{ vehicleTest.name }}
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title margin-left>
+            {{ vehicleTest.name }}
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content no-padding>
-  <ion-list class="full-dividers-list">
-    <ion-item detail-push>
-      <h2>{{ vehicle.vrms[0].vrm }}</h2>
-      <p>{{ vehicle.techRecord[0].vehicleType }}</p>
-      <button ion-button item-end (click)="openVehicleDetails()">Vehicle details</button>
-    </ion-item>
-    <ion-item *ngIf="vehicle.techRecord[0].vehicleType != 'Trailer'">
-      <ion-label>Odometer reading</ion-label>
-      <ion-input type="number" class="odometer-reading" placeholder="Enter value" [(ngModel)]="vehicleTest.odometerReading"
-                 (ngModelChange)="vehicleTest.odometerReading = convertToNumber($event)"></ion-input>
-      <ion-select interface="action-sheet" [(ngModel)]="vehicleTest.odometerMetric">
-        <ion-option value="km" [selected]="true">Kilometers</ion-option>
-        <ion-option value="mi">Miles</ion-option>
-      </ion-select>
-    </ion-item>
-    <ion-item-divider text-uppercase>
-      <span>DEFECTS</span>
-    </ion-item-divider>
-    <ion-item-sliding #item *ngFor="let defect of vehicleTest.defects">
-      <ion-item class="defect-details" (click)="openDefect(defect)">
-        <h3 class="defect-name">
-          {{ defect.ref }}
-          <ion-badge class="no-margin-right" item-end text-uppercase [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
-            {{ defect.deficiencyCategory }}
-          </ion-badge>
-          <ion-badge class="no-margin-left" item-end text-uppercase color="primary" *ngIf="defect.prs">
-            PRS
-          </ion-badge>
-        </h3>
-        <h4 class="parent-info-color">
-          {{ defect.metadata.category.imNumber }}. {{ defect.metadata.category.imDescription}}
-        </h4>
-        <h4 class="parent-info-color">
-          {{ defect.metadata.item.itemNumber }}. {{ defect.metadata.item.itemDescription }}
-        </h4>
-        <h4 class="parent-info-color truncate-text" *ngIf="defect.deficiencyCategory != 'Advisory'">
-          ({{ defect.deficiencyId }}). {{ defect.deficiencyText }}
-        </h4>
-      </ion-item>
-      <ion-item-options>
-        <button ion-button color="danger" (click)="showAlert(item, defect)">Remove</button>
-      </ion-item-options>
-    </ion-item-sliding>
-    <button ion-item detail-none class="btn-add-test" (click)="addDefect()">
-      <ion-icon name="add-circle-outline" item-end></ion-icon>
-      Add defect
-    </button>
-  </ion-list>
+    <ion-list class="full-dividers-list">
+        <ion-item detail-push>
+            <h2>{{ vehicle.vrms[0].vrm }}</h2>
+            <p>{{ vehicle.techRecord[0].vehicleType }}</p>
+            <button ion-button item-end (click)="openVehicleDetails()">Vehicle details</button>
+        </ion-item>
+        <ion-item *ngIf="vehicle.techRecord[0].vehicleType != 'Trailer'">
+            <ion-label>Odometer reading</ion-label>
+            <ion-input type="number" class="odometer-reading" placeholder="Enter value"
+                       [(ngModel)]="vehicleTest.odometerReading"
+                       (ngModelChange)="vehicleTest.odometerReading = convertToNumber($event)"></ion-input>
+            <ion-select interface="action-sheet" [(ngModel)]="vehicleTest.odometerMetric">
+                <ion-option value="km" [selected]="true">Kilometers</ion-option>
+                <ion-option value="mi">Miles</ion-option>
+            </ion-select>
+        </ion-item>
+        <ion-item-divider text-uppercase>
+            <span>DEFECTS</span>
+        </ion-item-divider>
+        <ion-item-sliding #item *ngFor="let defect of vehicleTest.defects">
+            <ion-item class="defect-details" (click)="openDefect(defect)">
+                <h3 class="defect-name">
+                    {{ defect.ref }}
+                    <ion-badge class="no-margin-right" item-end text-uppercase
+                               [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
+                        {{ defect.deficiencyCategory }}
+                    </ion-badge>
+                    <ion-badge class="no-margin-left" item-end text-uppercase color="primary" *ngIf="defect.prs">
+                        PRS
+                    </ion-badge>
+                </h3>
+                <h4 class="parent-info-color">
+                    {{ defect.metadata.category.imNumber }}. {{ defect.metadata.category.imDescription}}
+                </h4>
+                <h4 class="parent-info-color">
+                    {{ defect.metadata.item.itemNumber }}. {{ defect.metadata.item.itemDescription }}
+                </h4>
+                <h4 class="parent-info-color truncate-text" *ngIf="defect.deficiencyCategory != 'Advisory'">
+                    ({{ defect.deficiencyId }}). {{ defect.deficiencyText }}
+                </h4>
+            </ion-item>
+            <ion-item-options>
+                <button ion-button color="danger" (click)="showAlert(item, defect)">Remove</button>
+            </ion-item-options>
+        </ion-item-sliding>
+        <button ion-item detail-none class="btn-add-test" (click)="addDefect()">
+            <ion-icon name="add-circle-outline" item-end></ion-icon>
+            Add defect
+        </button>
+    </ion-list>
 </ion-content>
 <ion-footer>
-  <ion-list>
-    <ion-item>
-      <h2 item-start>{{ vehicleTest.name }}</h2>
-      <h1 item-end [ngClass]="vehicleTest.checkPass() ? 'test-type-pass' : 'test-type-fail'">{{ vehicleTest.checkPass() ? 'PASS' : 'FAIL' }}</h1>
-    </ion-item>
-    <button ion-button block class="btn-done" (click)="finishTest()">Done</button>
-  </ion-list>
+    <ion-list>
+        <ion-item>
+            <h2 item-start>{{ vehicleTest.name }}</h2>
+            <h1 item-end
+                [ngClass]="checkPass(vehicleTest) ? 'test-type-pass' : 'test-type-fail'">{{ checkPass(vehicleTest) ? 'PASS' : 'FAIL' }}</h1>
+        </ion-item>
+        <button ion-button block class="btn-done" (click)="finishTest()">Done</button>
+    </ion-list>
 </ion-footer>
