--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
@@ -12,7 +12,8 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-input margin-top class="custom-input shadow"
+  <ion-input margin-top text-uppercase
+             class="custom-input shadow"
              type="text" placeholder="Enter registration number or VIN"
              [(ngModel)]="searchVal" value=""></ion-input>
   <button margin-vertical ion-button block
