--- a/src/pages/testing/test-abandonment/test-abandoning/test-abandoning.html
+++ b/src/pages/testing/test-abandonment/test-abandoning/test-abandoning.html
@@ -15,16 +15,16 @@
 <ion-content class="content-background-color-grey">
     <ion-list>
         <ion-item-group>
-            <ion-item-divider>Reason(s) for abandoning this test</ion-item-divider>
-            <ion-item text-wrap
+            <ion-item-divider padding-left>Reason(s) for abandoning this test</ion-item-divider>
+            <ion-item text-wrap padding-horizontal
                       *ngFor="let reason of selectedReasons">
                 {{reason}}
             </ion-item>
         </ion-item-group>
         <ion-item-group>
-            <ion-item-divider *ngIf="editMode || additionalComment.length">Additional comments (optional)
+            <ion-item-divider *ngIf="editMode || additionalComment.length" padding-left>Additional comments (optional)
             </ion-item-divider>
-            <ion-item *ngIf="editMode || additionalComment.length">
+            <ion-item *ngIf="editMode || additionalComment.length" padding-left>
                 <ion-textarea placeholder="Add comments"
                               rows="5"
                               [(ngModel)]="additionalComment"
