--- a/src/pages/testing/test-creation/test-cancel/test-cancel.html
+++ b/src/pages/testing/test-creation/test-cancel/test-cancel.html
@@ -13,8 +13,8 @@
 <ion-content class="content-background-color-grey">
     <ion-list>
         <ion-item-group>
-            <ion-item-divider>Reason for cancellation (required)</ion-item-divider>
-            <ion-item>
+            <ion-item-divider padding-left>Reason for cancellation (required)</ion-item-divider>
+            <ion-item padding-left>
                 <ion-textarea placeholder="Add reason for cancellation"
                               rows="5"
                               [(ngModel)]="cancellationReason"></ion-textarea>
