--- a/src/pages/atf/atf-details/atf-details.html
+++ b/src/pages/atf/atf-details/atf-details.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title margin-left>
-        ATF Details
+        ATF details
         </ion-title>
         <ion-buttons end>
             <button ion-button (click)="startVisit()">
@@ -11,21 +11,25 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-    <span *ngIf="atf">
-        <div ion-item>
-            <h2 class="ion-item-header">{{ atf.atfName }}</h2>
-        </div>
-        <div ion-item>
-            <h3 class="ion-item-header">Address</h3>
-            <h3>{{ atf.atfAddress }}</h3>
-            <h3>{{ atf.atfTown}}</h3>
-            <h3>{{ atf.atfPostcode }}</h3>
-        </div>
-        <div ion-item>
-            <h3 class="ion-item-header">Site number</h3>
-            <h3>{{ atf.atfNumber }}</h3>
-        </div>
-    </span>
-    <div id="map"></div>
+<ion-content class="content-background-color-grey">
+    <ion-item-group>
+      <ion-item padding-left>
+        <div text-left float-left class="label-custom-style">ATF name</div>
+        <div text-right float-right class="value-custom-style">{{ atf.atfName }}</div>
+      </ion-item>
+      <ion-item>
+        <div padding-left text-left float-left class="label-custom-style">P-number</div>
+        <div float-right text-right class="value-custom-style">{{ atf.atfNumber }}</div>
+      </ion-item>
+      <ion-item-divider text-uppercase padding-left>Address</ion-item-divider>
+      <ion-item>
+        <div class="label-custom-style" padding-left>{{ atf.atfAddress }}</div>
+        <div class="label-custom-style" padding-left>{{ atf.atfTown}}</div>
+        <div class="label-custom-style" padding-left>{{ atf.atfPostcode }}</div>
+      </ion-item>
+      <ion-item-divider text-uppercase padding-left>Phone number</ion-item-divider>
+      <ion-item padding-left class="number-custom-style">
+        <ion-label text-left (click)="callNumber()">{{ atf.atfContactNumber}}</ion-label>
+      </ion-item>
+    </ion-item-group>
 </ion-content>
