--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -16,7 +16,7 @@
 
     <ion-item-group>
       <ion-item-divider text-uppercase>
-        <span>Defect item</span>
+        <span padding-left>Defect item</span>
       </ion-item-divider>
       <ion-grid padding-horizontal>
         <ion-row justify-content-start align-items-center class="defect-status">
@@ -39,46 +39,46 @@
 
     <ion-item-group>
       <ion-item-divider text-uppercase>
-        <span>LOCATION</span>
+        <span padding-left>LOCATION</span>
       </ion-item-divider>
 
-      <ion-item *ngIf="defectMetadata.location.vertical.length > 0">
+      <ion-item *ngIf="defectMetadata.location.vertical.length > 0" padding-left>
         <ion-label>Vertical</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.vertical" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.vertical" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.horizontal.length > 0">
+      <ion-item *ngIf="defectMetadata.location.horizontal.length > 0" padding-left>
         <ion-label>Horizontal</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.horizontal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.horizontal" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.lateral.length > 0">
+      <ion-item *ngIf="defectMetadata.location.lateral.length > 0" padding-left>
         <ion-label>Lateral</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.lateral" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.lateral" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.longitudinal.length > 0">
+      <ion-item *ngIf="defectMetadata.location.longitudinal.length > 0" padding-left>
         <ion-label>Longitudinal</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.longitudinal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.longitudinal" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.rowNumber.length > 0">
+      <ion-item *ngIf="defectMetadata.location.rowNumber.length > 0" padding-left>
         <ion-label>Row Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.rowNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.rowNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.seatNumber.length > 0">
+      <ion-item *ngIf="defectMetadata.location.seatNumber.length > 0" padding-left>
         <ion-label>Seat Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.seatNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.seatNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.axleNumber.length > 0">
+      <ion-item *ngIf="defectMetadata.location.axleNumber.length > 0" padding-left>
         <ion-label>Axle Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.axleNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.axleNumber" [value]="position">{{position}}</ion-option>
@@ -88,7 +88,7 @@
 
     <ion-item-group *ngIf="defectMetadata.notes">
       <ion-item-divider text-uppercase>
-        <span>NOTES</span>
+        <span padding-left>NOTES</span>
       </ion-item-divider>
       <ion-item padding-left>
         <ion-textarea placeholder="Add notes" [(ngModel)]="defect.notes" maxlength="200" class="textarea-height"></ion-textarea>
@@ -97,9 +97,9 @@
 
     <ion-item-group>
       <ion-item-divider text-uppercase>
-        <span>PRS</span>
+        <span padding-left>PRS</span>
       </ion-item-divider>
-      <ion-item no-lines>
+      <ion-item no-lines padding-left>
         <ion-label>Defect repaired during test</ion-label>
         <ion-toggle color="secondary" checked="false" [(ngModel)]="defect.prs"></ion-toggle>
       </ion-item>
