--- a/src/pages/testing/test-abandonment/reasons-selection/reasons-selection.html
+++ b/src/pages/testing/test-abandonment/reasons-selection/reasons-selection.html
@@ -16,8 +16,8 @@
 <ion-content>
     <ion-list>
         <ion-item-group>
-            <ion-item-divider>You can select multiple reasons for abandoning this test</ion-item-divider>
-            <ion-item text-wrap
+            <ion-item-divider padding-left>You can select multiple reasons for abandoning this test</ion-item-divider>
+            <ion-item text-wrap padding-horizontal
                       *ngFor="let reason of reasonsList">
                 <ion-label>{{reason.text}}</ion-label>
                 <ion-checkbox [(ngModel)]="reason.isChecked" (ionChange)="onCheck(reason)"></ion-checkbox>
