--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -42,43 +42,43 @@
         <span padding-left>LOCATION</span>
       </ion-item-divider>
 
-      <ion-item *ngIf="defectMetadata.location.vertical.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.vertical" padding-left>
         <ion-label>Vertical</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.vertical" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.vertical" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.horizontal.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.horizontal" padding-left>
         <ion-label>Horizontal</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.horizontal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.horizontal" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.lateral.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.lateral" padding-left>
         <ion-label>Lateral</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.lateral" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.lateral" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.longitudinal.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.longitudinal" padding-left>
         <ion-label>Longitudinal</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.longitudinal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.longitudinal" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.rowNumber.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.rowNumber" padding-left>
         <ion-label>Row Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.rowNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.rowNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.seatNumber.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.seatNumber" padding-left>
         <ion-label>Seat Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.seatNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.seatNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="defectMetadata.location.axleNumber.length > 0" padding-left>
+      <ion-item *ngIf="defectMetadata.location.axleNumber" padding-left>
         <ion-label>Axle Number</ion-label>
         <ion-select item-end interface="action-sheet" [(ngModel)]="defect.location.axleNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.axleNumber" [value]="position">{{position}}</ion-option>
