--- a/src/pages/testing/test-creation/test-types-list/test-types-list.html
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.html
@@ -13,7 +13,7 @@
                 class="list-item-height"
                 *ngFor="let testType of testTypeReferenceData | filterTestTypeByVehicle: vehicleData"
                 (click)="selectedItem(testType)">
-        <h3>{{ testType.name }}</h3>
+        <h3>{{ testType.testTypeName || testType.name.charAt(0).toUpperCase() + testType.name.slice(1, testType.name.length) }}</h3>
         <ion-icon item-end *ngIf="testType.nextTestTypesOrCategories" name="arrow-forward"></ion-icon>
       </ion-item>
     </ion-item-group>
