--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -102,7 +102,7 @@
             </button>
         </ion-buttons>
         <ion-buttons end>
-            <button ion-button (click)="addATFIssue()">
+            <button ion-button>
                 ATF Issue
             </button>
             <button ion-button (click)="onCancel()">Cancel</button>
